# ockta

./: .clang-format  CMakeLists.txt  LICENSE  README.md
libs/glad/include/KHR/: khrplatform.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
